got the regular expressions done, should cover all the cases it seems to be correctly identifying phone numbers with true or false now just need to add HTML elements for the results and figure out how to clear all of those HTML elements when its done

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <h1>Telephone Number Validator</h1>
 	<div id="phone-div">
 	  <div id="screen-div">
-	    <div id="results-div" class="results">
+	    <div id="results-div">
 		</div>
 		<!-- <div id="input-div"> -->
 		  <!-- <label for="number">Enter a phone number: </label> -->
-	      <input type="tel" id="number" placeholder="Enter a phone number:" required /> 
+	      <input type="tel" id="user-input" placeholder="Enter a phone number:" required /> 
 		<!-- </div> -->
 		<div id="button-div">
 	      <button type="button" id="check-btn">Check</button> 
